Fix spacing of Attack Type in spell grids (#132)
* Fix spacing of Attack Type in spell grids

* Compile HTML and CSS into `bin`

* Clean up comments.

---------

--- a/bin/main.css
+++ b/bin/main.css
@@ -3000,7 +3000,7 @@ body.sheet-darkmode .spells .spellNotesPopover button.popoverButton {
 }
 .spells .arcane-spells-grid .epic-table-header-grid.arcane {
   display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, 4fr) minmax(0, 1fr) minmax(0, 40px) minmax(0, 20px) minmax(0, 40px) minmax(0, 1fr) minmax(0, 80px) minmax(0, 1.5fr) minmax(0, 64px) minmax(0, 1.5fr) minmax(0, 30px) minmax(0, 24px) minmax(0, 24px) minmax(0, 40px) minmax(0, auto) minmax(0, 40px);
+  grid-template-columns: minmax(0, 1fr) minmax(0, 4fr) minmax(0, 1fr) minmax(0, 40px) minmax(0, 20px) minmax(0, 40px) minmax(0, 1fr) minmax(0, 70px) minmax(0, 1.5fr) minmax(0, 64px) minmax(0, 1.5fr) minmax(0, 30px) minmax(0, 24px) minmax(0, 24px) minmax(0, 40px) minmax(0, auto) minmax(0, 40px);
   column-gap: 2px;
   color: #fff;
   background-color: #b56632;
@@ -3023,7 +3023,7 @@ body.sheet-darkmode .spells .arcane-spells-grid .epic-table-header-grid.arcane {
 .spells .arcane-spells-grid div[data-groupname=repeating_arcane] > div,
 .spells .arcane-spells-grid div[data-epic-table-name=arcane] {
   display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, 4fr) minmax(0, 1fr) minmax(0, 40px) minmax(0, 20px) minmax(0, 40px) minmax(0, 1fr) minmax(0, 80px) minmax(0, 1.5fr) minmax(0, 64px) minmax(0, 1.5fr) minmax(0, 30px) minmax(0, 24px) minmax(0, 24px) minmax(0, 40px) minmax(0, auto) minmax(0, 40px);
+  grid-template-columns: minmax(0, 1fr) minmax(0, 4fr) minmax(0, 1fr) minmax(0, 40px) minmax(0, 20px) minmax(0, 40px) minmax(0, 1fr) minmax(0, 70px) minmax(0, 1.5fr) minmax(0, 64px) minmax(0, 1.5fr) minmax(0, 30px) minmax(0, 24px) minmax(0, 24px) minmax(0, 40px) minmax(0, auto) minmax(0, 40px);
   row-gap: 0;
   column-gap: 2px;
   background: transparent;
@@ -3124,7 +3124,7 @@ body.sheet-darkmode .spells .arcane-spells-grid button.updateRollSectionContent 
 }
 .spells .divine-spells-grid .epic-table-header-grid.divine {
   display: grid;
-  grid-template-columns: minmax(0, 40px) minmax(0, 2fr) minmax(0, 30px) minmax(0, 40px) minmax(0, 20px) minmax(0, 1fr) minmax(0, 2fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 2fr);
+  grid-template-columns: minmax(0, 40px) minmax(0, 2fr) minmax(0, 30px) minmax(0, 40px) minmax(0, 20px) minmax(0, 1fr) minmax(0, 70px) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 2fr);
   column-gap: 2px;
   color: #fff;
   background-color: #b56632;
@@ -3147,7 +3147,7 @@ body.sheet-darkmode .spells .divine-spells-grid .epic-table-header-grid.divine {
 .spells .divine-spells-grid div[data-groupname=repeating_divine] > div,
 .spells .divine-spells-grid div[data-epic-table-name=divine] {
   display: grid;
-  grid-template-columns: minmax(0, 40px) minmax(0, 2fr) minmax(0, 30px) minmax(0, 40px) minmax(0, 20px) minmax(0, 1fr) minmax(0, 2fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 2fr);
+  grid-template-columns: minmax(0, 40px) minmax(0, 2fr) minmax(0, 30px) minmax(0, 40px) minmax(0, 20px) minmax(0, 1fr) minmax(0, 70px) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 2fr);
   row-gap: 0;
   column-gap: 2px;
   background: transparent;
@@ -3238,7 +3238,7 @@ body.sheet-darkmode .spells .divine-spells-grid button.updateRollSectionContent 
 }
 .spells .innate-spells-grid .epic-table-header-grid.innate {
   display: grid;
-  grid-template-columns: minmax(0, 40px) minmax(0, 4fr) minmax(0, 30px) minmax(0, 32px) minmax(0, 2fr) minmax(0, 2fr) minmax(0, 2fr) minmax(0, 3fr) minmax(0, 2fr) minmax(0, 48px);
+  grid-template-columns: minmax(0, 40px) minmax(0, 4fr) minmax(0, 30px) minmax(0, 32px) minmax(0, 2fr) minmax(0, 70px) minmax(0, 2fr) minmax(0, 3fr) minmax(0, 2fr) minmax(0, 48px);
   column-gap: 2px;
   color: #fff;
   background-color: #b56632;
@@ -3261,7 +3261,7 @@ body.sheet-darkmode .spells .innate-spells-grid .epic-table-header-grid.innate {
 .spells .innate-spells-grid div[data-groupname=repeating_innate] > div,
 .spells .innate-spells-grid div[data-epic-table-name=innate] {
   display: grid;
-  grid-template-columns: minmax(0, 40px) minmax(0, 4fr) minmax(0, 30px) minmax(0, 32px) minmax(0, 2fr) minmax(0, 2fr) minmax(0, 2fr) minmax(0, 3fr) minmax(0, 2fr) minmax(0, 48px);
+  grid-template-columns: minmax(0, 40px) minmax(0, 4fr) minmax(0, 30px) minmax(0, 32px) minmax(0, 2fr) minmax(0, 70px) minmax(0, 2fr) minmax(0, 3fr) minmax(0, 2fr) minmax(0, 48px);
   row-gap: 0;
   column-gap: 2px;
   background: transparent;
